--- a/nembak.html
+++ b/nembak.html
@@ -42,7 +42,7 @@
     }
 
     #message {
-      font-size: 14px;
+      font-size: 2vw;
       line-height: 1.6;
       margin-top: 30px;
       max-width: 600px;
